[tool.poetry]
name = "artifacts"
version = "0.1.0"
description = ""
authors = ["yehor <egor.karabanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
loguru = "^0.7.2"
mypy = "^1.11.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
aiofiles = "^24.1.0"
aiohttp = {extras = ["speedups"], version = "^3.10.3"}
anyio = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
